--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 importlib-resources==5.12.0
 iniconfig==2.0.0
@@ -29,6 +30,7 @@ mdurl==0.1.2
 ordered-set==4.1.0
 packaging==23.1
 pluggy==1.2.0
+psycopg2-binary==2.9.6
 Pygments==2.15.1
 pytest==7.3.2
 python-decouple==3.8
